--- a/website/index.html
+++ b/website/index.html
@@ -47,6 +47,7 @@
   <section>
     <button type="button" name="button" class="button_send_data"></button>
     <button type="button" name="button" class="button_send_data_off"></button>
+    <!-- <button type="button" name="button" class="button_test"></button> -->
   </section>
 
 
