--- a/website/index.html
+++ b/website/index.html
@@ -19,7 +19,9 @@
 
   <section>
     <center>
-      <h2 class="title">Team 1do Website Demo</h2></center>
+      <img src="/assets/images/main_bus_stop.png" alt="" class="image">
+      <h2 class="title">Team 1do Website Demo</h2>
+    </center>
   </section>
   <h1>&nbsp;</h1>
   <h1>&nbsp;</h1>
