--- a/website/index.html
+++ b/website/index.html
@@ -18,8 +18,12 @@
 <body>
 
   <section>
-    <center>
-      <img src="/assets/images/main_bus_stop.png" alt="" class="image"><h5 class="title">디지털미디어시티역 2번 출구</h5></img>
+    <center class="img">
+      <div class="content">
+        <h5 class="title">디지털미디어시티역 2번 출구</h5>
+      </div>
+      <!-- <img src="/assets/images/main_bus_stop.png" alt="" class="image"><h5 class="title">디지털미디어시티역 2번 출구</h5></img> -->
+
       <!-- <h2 class="title">Team 1do Website Demo</h2> -->
     </center>
   </section>
