--- a/website/index.html
+++ b/website/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
+  <link rel="stylesheet" href="/style/main.css">
   <link rel="stylesheet" href="/style/bootstrap.min.css">
   <script type="text/javascript" src="scripts/jquery-3.1.1.js"></script>
   <script src="scripts/main.js"></script>
