--- a/website/index.html
+++ b/website/index.html
@@ -30,7 +30,7 @@
   </section>
   <h1>&nbsp;</h1>
   <h1>&nbsp;</h1>
-  <section>
+  <!-- <section>
     <div class="container">
       <div class="row">
         <div class="col-md-4">
@@ -46,10 +46,36 @@
             <li class="list-group-item">버스 도착 예정 시간</li>
           </ul>
         </div>
+      </div>
     </div>
+  </section> -->
+  <section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="">
+            <img src="/assets/images/reservation_img.png" alt="">
+            <div class="row">
+              <div class="col-md-6">
+                <h5>101</h5>
+                <h5>105</h5>
+                <h5>123</h5>
+                <h5>209</h5>
+              </div>
+              <div class="col-md-6">
+                <h5>309</h5>
+                <h5>256</h5>
+                <h5>653</h5>
+                <h5>655</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-9">
 
+        </div>
+      </div>
     </div>
-
   </section>
   <section>
     <button type="button" name="button" class="button_send_data"></button>
