--- a/website/index.html
+++ b/website/index.html
@@ -55,18 +55,18 @@
         <div class="col-md-3">
           <div class="">
             <img src="/assets/images/reservation_img.png" alt="">
-            <div class="row">
-              <div class="col-md-6">
-                <h5>101</h5>
-                <h5>105</h5>
-                <h5>123</h5>
-                <h5>209</h5>
+            <div class="row frame_border">
+              <div class="col-md-6 bus_num">
+                <h3>101</h3>
+                <h3>105</h3>
+                <h3>123</h3>
+                <h3>209</h3>
               </div>
-              <div class="col-md-6">
-                <h5>309</h5>
-                <h5>256</h5>
-                <h5>653</h5>
-                <h5>655</h5>
+              <div class="col-md-6 bus_num" >
+                <h3>309</h3>
+                <h3>256</h3>
+                <h3>653</h3>
+                <h3>655</h3>
               </div>
             </div>
           </div>
