--- a/website/index.html
+++ b/website/index.html
@@ -28,8 +28,8 @@
       <!-- <h2 class="title">Team 1do Website Demo</h2> -->
     </center>
   </section>
-  <h1>&nbsp;</h1>
-  <h1>&nbsp;</h1>
+  <h4>&nbsp;</h4>
+  <!-- <h1>&nbsp;</h1> -->
   <!-- <section>
     <div class="container">
       <div class="row">
