--- a/website/index.html
+++ b/website/index.html
@@ -17,18 +17,47 @@
 </head>
 
 <body>
-
   <section>
-    <center class="img">
-      <div class="content">
-        <h5 class="title">디지털미디어시티역 2번 출구</h5>
-      </div>
-      <!-- <img src="/assets/images/main_bus_stop.png" alt="" class="image"><h5 class="title">디지털미디어시티역 2번 출구</h5></img> -->
-
-      <!-- <h2 class="title">Team 1do Website Demo</h2> -->
-    </center>
+    <center>
+      <h1>Team 1도 Demo</h1></center>
   </section>
   <h4>&nbsp;</h4>
+  <h4>&nbsp;</h4>
+  <section>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <center class="img">
+            <div class="content">
+              <h5 class="title">디지털미디어시티역 2번 출구</h5>
+            </div>
+            <!-- <img src="/assets/images/main_bus_stop.png" alt="" class="image"><h5 class="title">디지털미디어시티역 2번 출구</h5></img> -->
+
+            <!-- <h2 class="title">Team 1do Website Demo</h2> -->
+          </center>
+        </div>
+        <div class="col-md-8">
+          <img src="/assets/images/reservation_img.png" alt="">
+          <div class="row frame_border">
+            <div class="col-md-6 bus_num">
+              <h3>101</h3>
+              <h3>105</h3>
+              <h3>123</h3>
+              <h3>209</h3>
+            </div>
+            <div class="col-md-6 bus_num">
+              <h3>309</h3>
+              <h3>256</h3>
+              <h3>653</h3>
+              <h3>655</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- <h1>&nbsp;</h1> -->
   <!-- <section>
     <div class="container">
@@ -49,7 +78,7 @@
       </div>
     </div>
   </section> -->
-  <section>
+  <!-- <section>
     <div class="container">
       <div class="row">
         <div class="col-md-3">
@@ -62,7 +91,7 @@
                 <h3>123</h3>
                 <h3>209</h3>
               </div>
-              <div class="col-md-6 bus_num" >
+              <div class="col-md-6 bus_num">
                 <h3>309</h3>
                 <h3>256</h3>
                 <h3>653</h3>
@@ -76,7 +105,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section>
     <button type="button" name="button" class="button_send_data"></button>
     <button type="button" name="button" class="button_send_data_off"></button>
