--- a/website/index.html
+++ b/website/index.html
@@ -30,14 +30,12 @@
         <div class="col-md-4">
           <center class="img">
             <div class="content">
-              <h5 class="title">디지털미디어시티역 2번 출구</h5>
+              <h4 class="title">디지털미디어시티역 2번 출구</h4>
             </div>
             <!-- <img src="/assets/images/main_bus_stop.png" alt="" class="image"><h5 class="title">디지털미디어시티역 2번 출구</h5></img> -->
 
             <!-- <h2 class="title">Team 1do Website Demo</h2> -->
           </center>
-        </div>
-        <div class="col-md-8">
           <img src="/assets/images/reservation_img.png" alt="">
           <div class="row frame_border">
             <div class="col-md-6 bus_num">
@@ -53,6 +51,23 @@
               <h3>655</h3>
             </div>
           </div>
+        </div>
+        <div class="col-md-8">
+          <!-- <img src="/assets/images/reservation_img.png" alt="">
+          <div class="row frame_border">
+            <div class="col-md-6 bus_num">
+              <h3>101</h3>
+              <h3>105</h3>
+              <h3>123</h3>
+              <h3>209</h3>
+            </div>
+            <div class="col-md-6 bus_num">
+              <h3>309</h3>
+              <h3>256</h3>
+              <h3>653</h3>
+              <h3>655</h3>
+            </div>
+          </div> -->
         </div>
       </div>
     </div>
