--- a/website/index.html
+++ b/website/index.html
@@ -53,6 +53,19 @@
           </div>
         </div>
         <div class="col-md-8">
+          <center class="img1">
+            <div class="content">
+            </div>
+          </center>
+          <center class="img2">
+            <div class="content">
+            </div>
+          </center>
+          <center class="img3">
+            <div class="content">
+            </div>
+          </center>
+          <img src="" alt="">
           <!-- <img src="/assets/images/reservation_img.png" alt="">
           <div class="row frame_border">
             <div class="col-md-6 bus_num">
