--- a/website/index.html
+++ b/website/index.html
@@ -53,7 +53,8 @@
           </div>
         </div>
         <div class="col-md-8">
-          <center class="img1">
+          <img src="/assets/images/main_bus_stop.png" alt="">
+          <!-- <center class="img1">
             <div class="content">
             </div>
           </center>
@@ -65,75 +66,13 @@
             <div class="content">
             </div>
           </center>
-          <img src="" alt="">
-          <!-- <img src="/assets/images/reservation_img.png" alt="">
-          <div class="row frame_border">
-            <div class="col-md-6 bus_num">
-              <h3>101</h3>
-              <h3>105</h3>
-              <h3>123</h3>
-              <h3>209</h3>
-            </div>
-            <div class="col-md-6 bus_num">
-              <h3>309</h3>
-              <h3>256</h3>
-              <h3>653</h3>
-              <h3>655</h3>
-            </div>
-          </div> -->
+          <img src="" alt=""> -->
         </div>
       </div>
     </div>
   </section>
 
-  <!-- <h1>&nbsp;</h1> -->
-  <!-- <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <ul class="list-group">
-            <li class="list-group-item">예약</li>
-            <li class="list-group-item">예약수정목록</li>
-          </ul>
-        </div>
-        <div class="col-md-4">&nbsp;
-        </div>
-        <div class="col-md-4">
-          <ul class="list-group">
-            <li class="list-group-item">버스 도착 예정 시간</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="">
-            <img src="/assets/images/reservation_img.png" alt="">
-            <div class="row frame_border">
-              <div class="col-md-6 bus_num">
-                <h3>101</h3>
-                <h3>105</h3>
-                <h3>123</h3>
-                <h3>209</h3>
-              </div>
-              <div class="col-md-6 bus_num">
-                <h3>309</h3>
-                <h3>256</h3>
-                <h3>653</h3>
-                <h3>655</h3>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-9">
 
-        </div>
-      </div>
-    </div>
-  </section> -->
   <section>
     <button type="button" name="button" class="button_send_data"></button>
     <button type="button" name="button" class="button_send_data_off"></button>
