--- a/website/index.html
+++ b/website/index.html
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="col-md-8">
-          <img src="/assets/images/main_bus_stop.png" alt="">
+          <img src="/assets/images/demo.jpeg" alt="" style="height:50%; width:50%;">
           <!-- <center class="img1">
             <div class="content">
             </div>
