--- a/website/index.html
+++ b/website/index.html
@@ -39,7 +39,7 @@
           <img src="/assets/images/reservation_img.png" alt="">
           <div class="row frame_border">
             <div class="col-md-6 bus_num">
-              <h3>101</h3>
+              <button type="button" name="button" class="button_send_data"><h3>101</h3></button>
               <h3>105</h3>
               <h3>123</h3>
               <h3>209</h3>
