--- a/website/index.html
+++ b/website/index.html
@@ -39,10 +39,22 @@
           <img src="/assets/images/reservation_img.png" alt="">
           <div class="row frame_border">
             <div class="col-md-6 bus_num">
-              <button type="button" name="button" class="button_send_data"><h3>101</h3></button>
-              <h3>105</h3>
-              <h3>123</h3>
-              <h3>209</h3>
+              <button type="button" name="button" class="button_send_data">
+                <h3>101</h3>
+                <img src="assets/images/reservation_img.png" style="width:40%; height:40%;">
+              </button>
+              <button type="button" name="button" class="button_send_data_off">
+                <h3>103</h3>
+              </button>
+              <button type="button" name="button">
+                <h3>105</h3>
+              </button>
+              <button type="button" name="button">
+                <h3>123</h3>
+              </button>
+              <button type="button" name="button">
+                <h3>209</h3>
+              </button>
             </div>
             <div class="col-md-6 bus_num">
               <h3>309</h3>
