--- a/website/index.html
+++ b/website/index.html
@@ -85,7 +85,7 @@
   <section>
     <button type="button" name="button" class="button_send_data"></button>
     <button type="button" name="button" class="button_send_data_off"></button>
-    <!-- <button type="button" name="button" class="button_test"></button> -->
+    <button type="button" name="button" class="button_test">fadsfdsffsfsa</button>
   </section>
 
 
